clone if in colab

--- a/train-decision-transformers.ipynb
+++ b/train-decision-transformers.ipynb
@@ -12,6 +12,21 @@
     {
       "cell_type": "code",
       "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "try:\n",
+        "    import google.colab\n",
+        "    !git clone https://github.com/FlutterbaseDotCom/hdt.git\n",
+        "    import sys\n",
+        "    sys.path.append('/content/hdt')\n",
+        "except ImportError:\n",
+        "        pass"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "4qntpWiEWX89"
       },
