--- a/train-decision-transformers.ipynb
+++ b/train-decision-transformers.ipynb
@@ -12,6 +12,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "test colab -> github save"
+      ],
+      "metadata": {
+        "id": "5b3DfLEdX3ER"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "WCsT6KVxwARY"
       },
