--- a/car_racing_DQN.ipynb
+++ b/car_racing_DQN.ipynb
@@ -1333,48 +1333,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import wandb\n",
-        "import random\n",
-        "\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "from torchviz import make_dot\n",
-        "\n",
-        "def draw_model_diagram(model, env):\n",
-        "    # get version of model\n",
-        "\n",
-        "    tmp_model_path ='/Users/jacob/Documents/T/GCR/artifacts/DQL_RL_11:v41/DQL_RL_11.zip'\n",
-        "    loaded_model = model.load(tmp_model_path)\n",
-        "    # wandb.init(entity=\"yakiv\",\n",
-        "    #         project=\"CarRacingDT\",\n",
-        "    #         resume= \"allow\")\n",
-        "    # model_artifact = wandb.use_artifact(model_save_name+':'+model_save_version, type='model')\n",
-        "    # artifact_dir = model_artifact.download()\n",
-        "    # loaded_model = model.load(artifact_dir+\"/\"+model_save_name)\n",
-        "\n",
-        "\n",
-        "    # play model\n",
-        "    obs = env.reset()\n",
-        "    if len(obs) == 2:\n",
-        "        obs = obs[0]\n",
-        "    action, _states = loaded_model.predict(obs,deterministic=True)\n",
-        "\n",
-        "    print(loaded_model.policy)\n",
-        "    #dot = make_dot(action, params=dict(loaded_model.named_parameters()))\n",
-        "\n",
-        "# Display the graph within the Jupyter notebook\n",
-        "    #dot.view()\n",
-        "\n",
-        "\n",
-        "    env.close()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "colab": {
@@ -1469,8 +1427,8 @@
         "env =  gym.make('CarRacing-v2', continuous=False, render_mode='human')\n",
         "\n",
         "# Model with 10.000 steps has best performance at 566 episode (566/20~=28)\n",
-        "#evaluate_version(DQN, env, 'DQL_RL_11', 'latest', \"\", epsilon=0.4)\n",
-        "draw_model_diagram(DQN, env)\n",
+        "evaluate_version(DQN, env, 'DQL_RL_11', 'latest', \"\", epsilon=0.4)\n",
+        "\n",
         "\n"
       ]
     }
