--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/FlutterbaseDotCom/hdt/blob/main/prepare_dataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/FlutterbaseDotCom/hdt"
@@ -12,7 +22,7 @@
         "id": "x0oO94pYZ2Xc",
         "outputId": "fb2ad1b0-13f2-44c6-8bb2-1082db9d308f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -37,7 +47,7 @@
       "metadata": {
         "id": "IUKakB7jaNgB"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +62,7 @@
         "id": "2J4S07_eiP58",
         "outputId": "e794a309-f004-4470-f0f2-e2b5f3371fbf"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +97,7 @@
         "id": "ZK8HYsjuaa3N",
         "outputId": "95171562-9cea-4517-dbc6-38e592ca0c80"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +263,7 @@
         "id": "E4i4a201aisD",
         "outputId": "44dd7159-d560-4ef3-9261-250e949399ad"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +325,7 @@
         "id": "cVcfB5ISbIds",
         "outputId": "19836a3e-a07f-42fc-865f-57465e9be016"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +386,7 @@
         "id": "bkLsVNfNbPjF",
         "outputId": "0f0a766d-2555-47cd-9ce3-cc66d303930e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +440,7 @@
         "id": "gi3TLKMuculh",
         "outputId": "ef5fa2e9-82ef-49b5-c9f2-1812788aaca3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +485,7 @@
         "id": "hig9ENh5bqVM",
         "outputId": "d68b4c8b-5aa1-4251-b729-1f5b1710e108"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +506,7 @@
       "metadata": {
         "id": "vn1vgJP0cDy2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +515,7 @@
       "metadata": {
         "id": "rA5d1eaLe_mG"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -606,7 +616,7 @@
         "id": "Y64dftq_bBD-",
         "outputId": "ea274232-5270-446f-e3fe-b1ed141e8abe"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -668,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1054,7 +1064,7 @@
         "id": "ilPJLQfUoWQv",
         "outputId": "06703604-8406-4751-dfbe-86b8b4bccf11"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1101,7 +1111,7 @@
         "id": "X9l9YSobpsJC",
         "outputId": "348a3cf7-f5d2-4176-c2e7-5277607b5db7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1165,7 +1175,7 @@
       "metadata": {
         "id": "aRXDAeZ5pdgf"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1181,7 +1191,7 @@
         "id": "eDer467Zp4Ut",
         "outputId": "1e9f4b2b-166a-4615-9ac8-657bd1c4eb30"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1251,7 +1261,7 @@
         "id": "YLPssCWTqjiw",
         "outputId": "31ce073a-62d6-4318-c8c9-95f4e4fb84a3"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,7 +1327,7 @@
       "metadata": {
         "id": "E5Gmx6Iaq2IH"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1390,7 +1400,8 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "A100"
+      "gpuType": "A100",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
