--- a/DT.ipynb
+++ b/DT.ipynb
@@ -45,6 +45,8 @@
         "    !pip install transformers\n",
         "    !pip install torchviz\n",
         "    !pip install accelerate -U\n",
+        "    !pip install h5py\n",
+        "    !pip install google-cloud-storage\n",
         "\n",
         "    with open('/content/.already_installed', 'w') as f:\n",
         "        f.write('done')\n",
@@ -109,59 +111,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting h5py\n",
-            "  Downloading h5py-3.10.0-cp310-cp310-macosx_10_9_x86_64.whl (3.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.17.3 in /Users/jacob/.pyenv/versions/3.10.12/lib/python3.10/site-packages (from h5py) (1.26.1)\n",
-            "Installing collected packages: h5py\n",
-            "Successfully installed h5py-3.10.0\n",
-            "\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install h5py\n"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 11,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "import h5py\n",
-        "import numpy as np\n",
-        "\n",
-        "def save_to_hdf5(data, filename, use_compression=False):\n",
-        "    with h5py.File(filename, 'w') as hdf5_file:\n",
-        "        for key, value in data.items():\n",
-        "            # Create a group for each key in the dictionary\n",
-        "            group = hdf5_file.create_group(key)\n",
-        "            for i, array in enumerate(value):\n",
-        "                # Store each array in the group, assigning an indexed name\n",
-        "                if use_compression:\n",
-        "                    group.create_dataset(str(i), data=array, compression=\"gzip\")\n",
-        "                else:\n",
-        "                    group.create_dataset(str(i), data=array)\n",
-        "\n",
-        "def load_from_hdf5(filename):\n",
-        "    data = {}\n",
-        "    with h5py.File(filename, 'r') as hdf5_file:\n",
-        "        for key in hdf5_file.keys():\n",
-        "            # Recreate the list of arrays from the group's datasets\n",
-        "            group = hdf5_file[key]\n",
-        "            data[key] = [np.array(group[str(i)]) for i in range(len(group))]\n",
-        "    return data\n"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
