--- a/DQN_generate_dataset.ipynb
+++ b/DQN_generate_dataset.ipynb
@@ -92,6 +92,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load pretrained DQN Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import utils.storage as storage\n",
+        "loaded_model = storage.get_pretrained_model(DQN,  'dql_car_racing.bin')\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Iteract with environmenr, build trajectories"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
@@ -182,13 +206,12 @@
         }
       ],
       "source": [
-        "import utils.storage as storage\n",
+        "env =  gym.make('CarRacing-v2', continuous=False) \n",
+        "\n",
         "MAX_EPISODE_STEPS = 1000 \n",
         "NUM_EPISODES = 150\n",
         "RTG_GAMMA = 1.0 # \"Return to GO\" with the default GAMMA is stored in the initial dataset. \n",
         "\n",
-        "env =  gym.make('CarRacing-v2', continuous=False) \n",
-        "loaded_model = storage.get_pretrained_model(DQN,  'dql_car_racing.bin')\n",
         "\n",
         "features = {\n",
         "    \"observations\": [],\n",
