--- a/DQN_generate_dataset.ipynb
+++ b/DQN_generate_dataset.ipynb
@@ -35,7 +35,7 @@
         "  if not os.path.exists('/content/.already_installed'):\n",
         "    !git clone https://github.com/FlutterbaseDotCom/hdt\n",
         "    !apt-get install -y swig\n",
-        "    !pip install -r requirements.txt\n",
+        "    !pip install -r hdt/requirements.txt\n",
         "    with open('/content/.already_installed', 'w') as f:\n",
         "        f.write('done')\n",
         "  %cd /content/hdt"
@@ -211,6 +211,7 @@
         "MAX_EPISODE_STEPS = 1000 \n",
         "NUM_EPISODES = 150\n",
         "RTG_GAMMA = 1.0 # \"Return to GO\" with the default GAMMA is stored in the initial dataset. \n",
+        "CUT_IF_NO_REWARD = 50\n",
         "\n",
         "\n",
         "features = {\n",
@@ -231,8 +232,6 @@
         "    step_index = 0\n",
         "    while not done:\n",
         "        step_index +=  1\n",
-        "        if step_index > MAX_EPISODE_STEPS:\n",
-        "            break\n",
         "\n",
         "        action, _states = loaded_model.predict(obs,deterministic=True)\n",
         "        new_obs, reward, done, t, i = env.step(action)\n",
@@ -246,18 +245,19 @@
         "        print(\".\", end=\"\")\n",
         "\n",
         "        # any positive reward within last 50 steps?\n",
-        "        if len(r) > 50 and max(r[-50:]) <= 0:\n",
-        "            r = r[:-50]\n",
-        "            d = d[:-50]\n",
-        "            a = a[:-50]\n",
-        "            d[-1] = True\n",
+        "        if step_index > MAX_EPISODE_STEPS or (len(r) > CUT_IF_NO_REWARD and max(r[-CUT_IF_NO_REWARD:]) <= 0):\n",
         "            break\n",
         "\n",
-        "    features[\"observations\"].append(o)\n",
-        "    features[\"actions\"].append(a)\n",
-        "    features[\"rewards\"].append(r)\n",
-        "    features[\"dones\"].append(d)\n",
+        "    fin_positive = len(r)-1\n",
+        "    for fin_positive in range (len(r)-1, 0, -1):\n",
+        "        if r[fin_positive] > 0:\n",
+        "            break\n",
+        "    features[\"observations\"].append(o[:fin_positive+1])\n",
+        "    features[\"actions\"].append(a[:fin_positive+1])\n",
+        "    features[\"dones\"].append(d[:fin_positive+1])\n",
         "\n",
+        "    r = r[:fin_positive+1]\n",
+        "    features[\"rewards\"].append(r)    \n",
         "    rtg = np.zeros_like(r)\n",
         "    rtg[-1] = r[-1]\n",
         "    for i in reversed(range(len(r) - 1)):\n",
