--- a/DQN_generate_dataset.ipynb
+++ b/DQN_generate_dataset.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### V 18"
+        "### Introduction\n",
+        "\n",
+        "This notebook generates a CarRacing-v2 dataset for offline reinforcement learning by using a pretrained DQN for environment exploration, with configurable episode count and length, and stores it in HDF5 on Google Cloud Storage."
       ]
     },
     {
@@ -78,8 +80,7 @@
         "import torch\n",
         "from stable_baselines3 import DQN\n",
         "from stable_baselines3.common.torch_layers import NatureCNN\n",
-        "from stable_baselines3.common.vec_env import DummyVecEnv, VecTransposeImage\n",
-        "from extract_cnn import prepare_observation_array\n"
+        "from stable_baselines3.common.vec_env import DummyVecEnv, VecTransposeImage\n"
       ]
     },
     {
@@ -206,6 +207,9 @@
         }
       ],
       "source": [
+        "from cnn_decision_transformer.cnn_feature_extractor import prepare_env_observation_array\n",
+        "\n",
+        "\n",
         "env =  gym.make('CarRacing-v2', continuous=False) \n",
         "\n",
         "MAX_EPISODE_STEPS = 1000 \n",
@@ -236,7 +240,7 @@
         "        action, _states = loaded_model.predict(obs,deterministic=True)\n",
         "        new_obs, reward, done, t, i = env.step(action)\n",
         "        total_reward = total_reward + reward\n",
-        "        oarr = prepare_observation_array(obs)\n",
+        "        oarr = prepare_env_observation_array(obs)\n",
         "        o.append(oarr.flatten())\n",
         "        a.append(action.item())\n",
         "        r.append(reward)\n",
