--- a/1/DT_train.ipynb
+++ b/1/DT_train.ipynb
@@ -87,10 +87,10 @@
         "from torch.utils.data import Subset\n",
         "from transformers import Trainer, TrainingArguments\n",
         "\n",
-        "from dt.configuration_decision_transformer import DecisionTransformerConfig\n",
-        "from dt.modeling_decision_transformer import DecisionTransformerModel\n",
+        "from cnn_decision_transformer.configuration_decision_transformer import DecisionTransformerConfig\n",
+        "from cnn_decision_transformer.modeling_decision_transformer import DecisionTransformerModel\n",
         "from extract_cnn import prepare_observation_array\n",
-        "from dt.trainable_dt import DecisionTransformerGymDataCollator, TrainableDT\n",
+        "from cnn_decision_transformer.trainable_dt import DecisionTransformerGymDataCollator, TrainableDT\n",
         "\n",
         "\n",
         "\n"
@@ -438,7 +438,7 @@
         "\n",
         "\n",
         "os.environ[\"WANDB_DISABLED\"] = \"false\"\n",
-        "os.environ['WANDB_NOTEBOOK_NAME'] = 'DT.ipynb'\n",
+        "os.environ['WANDB_NOTEBOOK_NAME'] = 'cnn_decision_transformer.ipynb'\n",
         "os.environ['WANDB_MODE']='online'\n",
         "os.environ[\"WANDB_LOG_MODEL\"] = \"checkpoint\"\n",
         "\n",
